// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableRowFlex> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  className="c0"
/>
`;

exports[`<TableRowFlex> should render correctly when enableHover 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
}

.c0:hover {
  background-color: #F0F3F7;
  color: #1C2025;
}

<div
  className="c0"
/>
`;

exports[`<TableRowFlex> should render correctly when isSelected 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #D1DBE8;
}

<div
  className="c0"
/>
`;
